TEST_PROGRAMS/typing_benchmarks/invalid/struct1.go
package main

func main() {
	type t struct {
		a int
		a int
	}
}
